# GPTImageCreator

./: CMakeLists.txt  README.md  config.json
include/: cal_types.h  crc32.hpp  fat.hpp  fat_types.hpp  gpt.hpp  gpt_types.hpp  memory_map.hpp
src/: crc32.cpp  fat.cpp  gpt.cpp  main.cpp  memory_map.cpp
